mudando o idioma das frases para português

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <img class="avatar" src="avatar.jpg" alt="A headshot of the quote author" />
         <div id="loader">
             <img id="loader-img" src="loading.gif" alt="Loading spinner"/>
-            <h3>Fetching phrase &amp; image...</h3>
+            <h3>Criando Frase &amp; buscando imagem...</h3>
         </div>
         <div class="quote-wrapper">
             <h2 class="quote"><span><span class="quote-span"></span></span></h2>
